removed pmd
SVN-Revision: 19684