@@ -177,7 +177,7 @@ public abstract class AbstractMetadataManager
 		try
 		{
 			// After moving to MYSQL 5.2, the type checking is strict so changing the identifier to Long.
-			List objects = bizLogic.retrieve(objectName, DEConstants.OBJ_IDENTIFIER, new Long(identifier));
+			List objects = bizLogic.retrieve(objectName, DEConstants.OBJ_IDENTIFIER, Long.valueOf(identifier));
 
 			if (objects == null || objects.isEmpty())
 			{
@@ -687,7 +687,7 @@ public abstract class AbstractMetadataManager
 				identifier = (String) innnerList.get(0);
 				if (identifier != null)
 				{
-					entityRecord = new EntityRecord(new Long(identifier));
+					entityRecord = new EntityRecord(Long.valueOf(identifier));
 					records.add(entityRecord);
 				}
 			}
